# video-archiver

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/models/: types.rs
